deploy: 59a676ed6ac35d31ebdcb0d91e94abd1259e294a

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <h2>The Archive</h2>
         <ul class="poem-list">
-            <li><a href="My First Poem.html">My First Poem</a></li>
+            <li><a href="Mārcis.html">Mārcis</a></li>
         </ul>
     </main>
     <footer>
