deploy: eb36b3c8d2303b7712ea4e613cf014f9fc51efe6

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <h2>The Archive</h2>
         <ul class="poem-list">
-            <li><a href="Mārcis.html">Mārcis</a></li>
+            <li><a href="Mārcis.html">Mārcis</a></li><li><a href="a poem about a radioactive duck.html">a poem about a radioactive duck</a></li>
         </ul>
     </main>
     <footer>
