--- a/a poem about a radioactive duck.html
+++ b/a poem about a radioactive duck.html
@@ -47,7 +47,7 @@ will be know as the radioactive duck.</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">Date started: 2025-07-14
+        <pre class="date-block">Date started: 2022-06
 Date finished: 2022-06</pre>
     </main>
     <footer>
