deploy: 9ab80bc18b97723b02dfe55f62ceead7a4b3bb1a

--- a/Mārcis.html
+++ b/Mārcis.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mārcis | The Poetry of cafiro</title>
+    <title>Mārcis | The Collective Archive of cafiro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@ Es interesējos: “Vai iedosi grasi?”</p>
 Date finished: 2020</pre>
     </main>
     <footer>
-        <p>© 2024 cafiro</p>
+        <p>© 2025 cafiro</p>
     </footer>
 </body>
 </html>
