--- a/a poem about a radioactive duck.html
+++ b/a poem about a radioactive duck.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a poem about a radioactive duck | The Poetry of cafiro</title>
+    <title>a poem about a radioactive duck | The Collective Archive of cafiro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +51,7 @@ will be know as the radioactive duck.</p>
 Date finished: 2022-06</pre>
     </main>
     <footer>
-        <p>© 2024 cafiro</p>
+        <p>© 2025 cafiro</p>
     </footer>
 </body>
 </html>
