--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Poetry of cafiro</title>
+    <title>The Collective Archive of cafiro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>The Poetry of cafiro</h1>
+        <h1>The Collective Archive of cafiro</h1>
     </header>
     <main>
         <h2>The Archive</h2>
@@ -21,7 +21,7 @@
         </ul>
     </main>
     <footer>
-        <p>© 2024 cafiro</p>
+        <p>© 2025 cafiro</p>
     </footer>
 </body>
 </html>
