--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>The Collective Archive of cafiro</h1>
+        <p>A collection of words, thoughts, and verses.</p>
     </header>
     <main>
-        <h2>The Archive</h2>
-        <ul class="poem-list">
-            <li><a href="Mārcis.html">Mārcis</a></li><li><a href="a poem about a radioactive duck.html">a poem about a radioactive duck</a></li>
+        <div class="controls">
+            <input type="text" id="searchInput" class="search-input" placeholder="Search poems by title...">
+            <select id="sortSelect" class="sort-select">
+                <option value="newest">Newest First</option>
+                <option value="oldest">Oldest First</option>
+            </select>
+        </div>
+        <ul id="poemList" class="poem-list">
+            <li data-date="1970-01-01"><a href="Mārcis.html"><span class="item-title">Mārcis</span><span class="item-date">1970-01-01</span></a></li><li data-date="1970-01-01"><a href="a poem about a radioactive duck.html"><span class="item-title">a poem about a radioactive duck</span><span class="item-date">1970-01-01</span></a></li>
         </ul>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
