--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="controls">
             <input type="text" id="searchInput" class="search-input" placeholder="Search poems by title...">
             <select id="sortSelect" class="sort-select">
-                <option value="newest">Newest First</option>
-                <option value="oldest">Oldest First</option>
+                <option value="newest">Sort: Newest First</option>
+                <option value="oldest">Sort: Oldest First</option>
             </select>
         </div>
         <ul id="poemList" class="poem-list">
