deploy: 9f1371636568254c537afb271922b0b74c61bd66

--- a/Mārcis.html
+++ b/Mārcis.html
@@ -38,7 +38,7 @@ Es interesējos: “Vai iedosi grasi?”</p>
         </div>
         <p class="artist-name">/cafiro/</p>
         <pre class="date-block">Date started: Nezināms
-Date finished: 2020</pre>
+Date finished: 2020-01-01</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
