--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </select>
         </div>
         <ul id="poemList" class="poem-list">
-            <li data-date="1970-01-01"><a href="Mārcis.html"><span class="item-title">Mārcis</span><span class="item-date">1970-01-01</span></a></li><li data-date="1970-01-01"><a href="a poem about a radioactive duck.html"><span class="item-title">a poem about a radioactive duck</span><span class="item-date">1970-01-01</span></a></li>
+            <li data-date="2022-06-17"><a href="a poem about a radioactive duck.html"><span class="item-title">a poem about a radioactive duck</span><span class="item-date">2022-06-17</span></a></li><li data-date="2020-01-01"><a href="Mārcis.html"><span class="item-title">Mārcis</span><span class="item-date">2020-01-01</span></a></li>
         </ul>
     </main>
     <footer>
