--- a/a poem about a radioactive duck.html
+++ b/a poem about a radioactive duck.html
@@ -47,8 +47,8 @@ will be know as the radioactive duck.</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">Date started: 2022-06
-Date finished: 2022-06</pre>
+        <pre class="date-block">Date started: 2022-06-17
+Date finished: 2022-06-17</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
