deploy: c4f65f98b5cf1d3e2d56261da3ccc90f5d1f61f3

--- a/a poem about a radioactive duck.html
+++ b/a poem about a radioactive duck.html
@@ -47,7 +47,7 @@ will be know as the radioactive duck.</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">Date started: 2022-06-17
+        <pre class="date-block">Date started: Unknown
 Date finished: 2022-06-17</pre>
     </main>
     <footer>
