deploy: 27cf6a6a8bff79e29d5b5ec00c7448948c090c73

--- a/atmiņas.html
+++ b/atmiņas.html
@@ -45,8 +45,7 @@ gaidiet, es došu jums ziņu.</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">Date started: Unknown
-Date finished: 2024-09-24</pre>
+        <pre class="date-block">Date finished: 2024-09-24</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
