--- a/bet es.html
+++ b/bet es.html
@@ -87,8 +87,7 @@ kurā pazūdi</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">Date started: 2025-06-17
-Date finished: 2025-06-17</pre>
+        <pre class="date-block">Date finished: 2025-06-17</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
