deploy: bc3a096a99bf3fbd3313e5fa0a368b176a21ce00

--- a/Mārcis.html
+++ b/Mārcis.html
@@ -37,8 +37,7 @@ Es interesējos: “Vai iedosi grasi?”</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">Date started: Nezināms
-Date finished: 2020-01-01</pre>
+        <pre class="date-block">2020-01-01</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
