deploy: 88df6897d5ed490cea20adc0bbd188d508ae95e0

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </select>
         </div>
         <ul id="poemList" class="poem-list">
-            <li data-date="2025-06-17"><a href="bet es.html"><span class="item-title">bet es</span><span class="item-date">2025-06-17</span></a></li><li data-date="2025-06-07"><a href="būtība.html"><span class="item-title">būtība</span><span class="item-date">2025-06-07</span></a></li><li data-date="2024-09-24"><a href="atmiņas.html"><span class="item-title">atmiņas</span><span class="item-date">2024-09-24</span></a></li><li data-date="2022-06-17"><a href="a poem about a radioactive duck.html"><span class="item-title">a poem about a radioactive duck</span><span class="item-date">2022-06-17</span></a></li><li data-date="2020-01-01"><a href="Mārcis.html"><span class="item-title">Mārcis</span><span class="item-date">2020-01-01</span></a></li>
+            <li data-date="2025-06-17"><a href="bet es.html"><span class="item-title">bet es</span><span class="item-date">2025-06-17</span></a></li><li data-date="2025-06-07"><a href="būtība.html"><span class="item-title">būtība</span><span class="item-date">2025-06-07</span></a></li><li data-date="2024-09-24"><a href="atmiņas.html"><span class="item-title">atmiņas</span><span class="item-date">2024-09-24</span></a></li><li data-date="2022-06-17"><a href="a poem about a radioactive duck.html"><span class="item-title">a poem about a radioactive duck</span><span class="item-date">2022-06-17</span></a></li><li data-date="2020-01-01"><a href="Mārcis.html"><span class="item-title">Mārcis</span><span class="item-date">2020-01-01</span></a></li><li data-date="1970-01-01"><a href="Untitled.html"><span class="item-title">None</span><span class="item-date">1970-01-01</span></a></li>
         </ul>
     </main>
     <footer>
