deploy: 3247dd291f69df3a32d3c3abd3b58db334936838

--- a/index.html
+++ b/index.html
@@ -638,8 +638,8 @@ uz mājas pusi tikt-tikt.</p></div>
         <li class="poem-card" data-title="kožlenes" data-content="<p>čigāniņs sēž un košļā kožļen',<br />
 skatās uz torņiem un paman' ļoteņ'  </p>
 
-<p>mēnestiņš auro: &quot;Ko tu lūr'?,<br />
-pienācis laiks tev olas skūt.&quot;  </p>
+<p>mēnestiņš auro: "Ko tu lūr'?,<br />
+pienācis laiks tev olas skūt."  </p>
 
 <p>nodārd zibens, ka lietus sāk,<br />
 čigānam spiests, nu, mājās slāt.  </p>
@@ -1130,7 +1130,7 @@ cik vien ātri varēdams,<br />
 acītiņām lielām, spožām,<br />
 pie sevis klusi sacīdams:</p>
 
-<p>&quot;kas gan mani ļoti kāro,<br />
+<p>"kas gan mani ļoti kāro,<br />
 lai es sevi iecienītu?<br />
 gribu zināt vārdu dārgo,<br />
 lai man dotu cerību.</p>
@@ -1138,7 +1138,7 @@ lai man dotu cerību.</p>
 <p>es gribu tikai gribu<br />
 just, ka mirklis pieder man,<br />
 ka šī lieta, spožā, gludā,<br />
-manu tukšumu reiz klan.&quot;</p>
+manu tukšumu reiz klan."</p>
 
 <p>aiz stūra elpu atguva,<br />
 sirds tam krūtīs sitās traki.<br />
@@ -1220,18 +1220,18 @@ sevi novārtā metot.</p>
 Tumsa to nīcina.<br />
 Onkulis tīko pēc Bezgalības un tās brīvības</p>
 
-<p>&quot;Veries, bet neatveries.<br />
-Izpaudies, bet nepārcenties&quot;</p>
+<p>"Veries, bet neatveries.<br />
+Izpaudies, bet nepārcenties"</p>
 
-<pre><code>&quot;Esmu stipra, bet vāja.
-Es nespēju tikt sev pašai pāri.&quot;
+<pre><code>"Esmu stipra, bet vāja.
+Es nespēju tikt sev pašai pāri."
 </code></pre>
 
-<p>&quot;Tu esi, kas tu vēlies būt!<br />
-Tumsa pieņem tevi kāda vien esi!&quot;</p>
+<p>"Tu esi, kas tu vēlies būt!<br />
+Tumsa pieņem tevi kāda vien esi!"</p>
 
-<pre><code>&quot;Es ticu un es varu.
-Es dzimšu no jauna!&quot;
+<pre><code>"Es ticu un es varu.
+Es dzimšu no jauna!"
 </code></pre>
 
 <p>Tumsa mūs visus iedvesmo.<br />
