deploy: 861b0cbd9f54547548cf379788da0e540441a113

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ spēka dzīvot, bļeģ, arī nekur nav.</p>
 
 <p>revolverī lodes nekad nav.<br />
 bļeģ, dzīvot vēlmes nav.<br />
-labāk, ja manis nekur nav.</p>" data-date="1970-01-01">
+labāk, ja manis nekur nav.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="nekā nav.html">nekā nav</a></h2>
             <div class="poem-preview"><p>sit pulksten 6.30, enerģijas nekur nav.<br />
 atver ledusskapi, bļeģ, piena nav.<br />
@@ -143,7 +144,8 @@ priekšā.<br />
     sāpju lemtā [z]<br />
     pusaudze,<br />
     es tev saku<br />
-    cieņā.</p>" data-date="1970-01-01">
+    cieņā.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="tev, tava, tavs.html">tev, tava, tavs</a></h2>
             <div class="poem-preview"><p>būšu tava [meitene]<br />
 pirmā.<br />
@@ -285,7 +287,8 @@ kas ausīs čukst<br />
 <p>esmu kā klātbūtne [z]<br />
 kas tevi ieskauj<br />
     bet es - tukšums [m]<br />
-    kurā pazūdi</p>" data-date="1970-01-01">
+    kurā pazūdi</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="bet es.html">bet es</a></h2>
             <div class="poem-preview"><p>esmu kā kukainis [zēns]<br />
 zemes dziļumos<br />
@@ -359,7 +362,8 @@ kas tevi ieskauj<br />
             <a href="bet es.html" class="read-more">Read more →</a>
         </li>
         
-        <li class="poem-card" data-title="None" data-content="<p></p>" data-date="1970-01-01">
+        <li class="poem-card" data-title="None" data-content="<p></p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="vasara.html">None</a></h2>
             <div class="poem-preview"><p></p></div>
             <a href="vasara.html" class="read-more">Read more →</a>
@@ -383,7 +387,8 @@ tad Mārcis teica: “Ej uz kāta!”</p>
 <p>Reiz Mārcim teica, dzeju raksti,<br />
 un Mārcis teica, ko tu baksti?<br />
 Un tad kad, Tu šo lasi,<br />
-Es interesējos: “Vai iedosi grasi?”</p>" data-date="1970-01-01">
+Es interesējos: “Vai iedosi grasi?”</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="Mārcis.html">Mārcis</a></h2>
             <div class="poem-preview"><p>Reiz dzīvoja garais Mārcis,<br />
 kuram ļoti patika cālis.<br />
@@ -435,7 +440,8 @@ sitot cauri skaņas skalai.</p>
 <p>skalai, kas tur dzirdi tavu,<br />
 ak dievs, neatstāj savu.<br />
 savu sirdi, kas ir rāma,<br />
-mūc, bet visur reklāma.</p>" data-date="1970-01-01">
+mūc, bet visur reklāma.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="reklāma.html">reklāma</a></h2>
             <div class="poem-preview"><p>reklāma, nospied, cik nav žēl,<br />
 atmiņas pazūd man diemžēl.<br />
@@ -505,7 +511,8 @@ vientiesim zvanija murga armija.</p>
 <p>lieciet vientiesi mierā,<br />
 tam sāpju jau daudz,<br />
 murgo tas par laikiem labiem,<br />
-lieciet viņu lūdzu mierā.</p>" data-date="1970-01-01">
+lieciet viņu lūdzu mierā.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="vientuļais vientiesis.html">vientuļais vientiesis</a></h2>
             <div class="poem-preview"><p>cilvēki, cilvēki,<br />
 visa visuma zinātāji.<br />
@@ -547,7 +554,8 @@ lieciet viņu lūdzu mierā.</p></div>
             <a href="vientuļais vientiesis.html" class="read-more">Read more →</a>
         </li>
         
-        <li class="poem-card" data-title="None" data-content="<p></p>" data-date="1970-01-01">
+        <li class="poem-card" data-title="None" data-content="<p></p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="dzejolītis par ārkārtīgi labu laika pavadīšanu.html">None</a></h2>
             <div class="poem-preview"><p></p></div>
             <a href="dzejolītis par ārkārtīgi labu laika pavadīšanu.html" class="read-more">Read more →</a>
@@ -591,7 +599,8 @@ zebriņš dusmās nīk-nīk.</p>
 <p>ignorējis zirdziņu,<br />
 garu, brašu zirdziņu,<br />
 zebriņš rikšo rik-rik,<br />
-uz mājas pusi tikt-tikt.</p>" data-date="1970-01-01">
+uz mājas pusi tikt-tikt.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="ieraudzīju.html">ieraudzīju</a></h2>
             <div class="poem-preview"><p>ieraudzīju kamieli,<br />
 lielu, brašu kamieli.<br />
@@ -677,7 +686,8 @@ zem kuras ir paslēpta viena kožlene.  </p>
 kurš viņam kaut ko tādu nestu?  </p>
 
 <p>ieliek, nu, viņš mutē kožļen'<br />
-atgāžas un sāk meklēt ļoten'</p>" data-date="1970-01-01">
+atgāžas un sāk meklēt ļoten'</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="kožlenes.html">kožlenes</a></h2>
             <div class="poem-preview"><p>čigāniņs sēž un košļā kožļen',<br />
 skatās uz torņiem un paman' ļoteņ'  </p>
@@ -768,7 +778,8 @@ nīdu es</p>
 <p>bērnības draugs<br />
 nebiju es<br />
 tikai vien sapnis<br />
-biju es</p>" data-date="1970-01-01">
+biju es</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="es.html">es</a></h2>
             <div class="poem-preview"><p>tavā domu baseinā<br />
 peldējos es<br />
@@ -850,7 +861,8 @@ drumstalām</p>
 <p>vairs nav krēsla<br />
 vairs nav miņa<br />
 palikusi vien<br />
-atmiņa</p>" data-date="1970-01-01">
+atmiņa</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="vientuļais krēsls.html">vientuļais krēsls</a></h2>
             <div class="poem-preview"><p>tuksneša vidu,<br />
 kalnu ēnā.<br />
@@ -932,7 +944,8 @@ tā ir viņu vienīgā dziesma</p>
 <p>es sēžu pie galda un ēdu<br />
 un maksāju nodevas jums<br />
 par dzeloni, vasaras tveici<br />
-šis medus ir veltījums jums</p>" data-date="1970-01-01">
+šis medus ir veltījums jums</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="prostitūta.html">prostitūta</a></h2>
             <div class="poem-preview"><p>dabas prostitūta spindz<br />
 tās sasodītās bites<br />
@@ -1000,7 +1013,8 @@ vai kļūda bija mana dzimšana?<br />
 un žvāks...<br />
 krīt līķis uz zemes bāls.<br />
 gar malu paskrien balta pele,<br />
-un, nu, gan nav skaists vizuāls.</p>" data-date="1970-01-01">
+un, nu, gan nav skaists vizuāls.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="jaunība.html">jaunība</a></h2>
             <div class="poem-preview"><p>te aši pazūd jaunība,<br />
 kā greboši kauli zārkā.<br />
@@ -1062,7 +1076,8 @@ pēdējā cerībā<br />
 iekrīti tumsībā</p>
 
 <p>ilgi! ilgi! ilgi!<br />
-mirsti! mirsti! mirsti!</p>" data-date="1970-01-01">
+mirsti! mirsti! mirsti!</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="ceļojums cerībā.html">ceļojums cerībā</a></h2>
             <div class="poem-preview"><p>ilgstošā cerībā<br />
 tumšajā vakarā<br />
@@ -1153,7 +1168,8 @@ stāstam par tiem, kas ir gariem</p>
 <p>gariem pirkstiem, tukšām sirdīm,<br />
 kas caur veikaliem iet klusi,<br />
 meklējot starp lietu mirdziem<br />
-savu pazudušo pusi.</p>" data-date="1970-01-01">
+savu pazudušo pusi.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="nepareizi dzimušie.html">nepareizi dzimušie</a></h2>
             <div class="poem-preview"><p>kleptomāņi ārprātīgie,<br />
 lielveikali nolemtie.<br />
@@ -1240,7 +1256,8 @@ Tā ļauj mums būt pašiem.</p>
 <p>Kā ola, kas vieno sevī divus,<br />
 tā Onkulis sader ar Bezgalību.</p>
 
-<p>Ola satur mūsu gaišo un tumšo.</p>" data-date="1970-01-01">
+<p>Ola satur mūsu gaišo un tumšo.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="no burbuļa līdz olai.html">no burbuļa līdz olai</a></h2>
             <div class="poem-preview"><p>Klaiņojot tumsā tu esi tu pats.<br />
 Bez dzīves jēgas vai ar to.<br />
@@ -1305,7 +1322,8 @@ ar sirdi centīšos es aizmirst tos -</p>
 <p>tos nelabos sapņus, tos spokus,<br />
 viss kas atlicis ir tik taisīt jokus.<br />
 pasmieties par savu atmiņu,<br />
-gaidiet, es došu jums ziņu.</p>" data-date="1970-01-01">
+gaidiet, es došu jums ziņu.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="atmiņas.html">atmiņas</a></h2>
             <div class="poem-preview"><p>ieraugot akmeni atmiņas nāk,<br />
 domas nelabas lidot sāk.<br />
@@ -1362,7 +1380,8 @@ un uz sejas man guļ svešinieka roka.</p>
 
 <p>un uz pasaules naidu tā lemta.<br />
 kā no koka slēpta,<br />
-ir apslēpta šī sāpju rēta.</p>" data-date="1970-01-01">
+ir apslēpta šī sāpju rēta.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="impulss.html">impulss</a></h2>
             <div class="poem-preview"><p>es kā lietainais rudens vakars,<br />
 nāku bargi ass,<br />
@@ -1421,7 +1440,8 @@ nut.</p>
 <p>and from now on,<br />
 says the law,<br />
 sneaky snuck,<br />
-will be know as the radioactive duck.</p>" data-date="1970-01-01">
+will be know as the radioactive duck.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="a poem about a radioactive duck.html">a poem about a radioactive duck</a></h2>
             <div class="poem-preview"><p>there once was a duck,<br />
 whose nickname was sneaky snuck.<br />
@@ -1498,7 +1518,8 @@ tikai iekšēji sev kauc</p>
 <p>un tas jautājums, kas sākās,<br />
 paliek trūdam ar smagu krustu.<br />
 tu pats esi atbilde vāja,<br />
-kas bez skaņas brūk ar pūstu.</p>" data-date="1970-01-01">
+kas bez skaņas brūk ar pūstu.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="būtība.html">būtība</a></h2>
             <div class="poem-preview"><p>rodas reiz jautājums<br />
 vai cilvēks ir tā rīcība<br />
@@ -1568,7 +1589,8 @@ sauc tavas dvēseles sirdsdedzi.</p>
 <p>pazūd, nu, dvēsele mana,<br />
 paužot visus melus tā.<br />
 tomēr šī mana mazā mele,<br />
-vienmēr - vistuvākā.</p>" data-date="1970-01-01">
+vienmēr - vistuvākā.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="dvēsele.html">dvēsele</a></h2>
             <div class="poem-preview"><p>te skumst dvēsele mana,<br />
 kā ziedlapiņa vējā.<br />
@@ -1628,7 +1650,8 @@ priecīgā pasakā.</p>
 <p>izsīkst pasaka,<br />
 gaisā izgaistot.<br />
 cik labi ir būt,<br />
-dzīves pasakā.</p>" data-date="1970-01-01">
+dzīves pasakā.</p>
+" data-date="1970-01-01">
             <h2 class="index-poem-title"><a href="pasaka.html">pasaka</a></h2>
             <div class="poem-preview"><p>pieneņu pasaka,<br />
 skaista kā asara.<br />
