--- a/dzejolītis par ārkārtīgi labu laika pavadīšanu.html
+++ b/dzejolītis par ārkārtīgi labu laika pavadīšanu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>None | The Collective Archive Of cafiro</title>
+    <title>dzejolītis, par ārkārtīgi labu laika pavadīšanu | The Collective Archive Of cafiro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +13,65 @@
 <body>
     <main class="poem-container">
         <a href="index.html" class="back-link">← Back to The Archive</a>
-        <h1 class="poem-title">None</h1>
+        <h1 class="poem-title">dzejolītis, par ārkārtīgi labu laika pavadīšanu</h1>
         <div class="poem-body">
-            <p></p>
+            <p>alejāsi'<br />
+būšu, bušu<br />
+klibs gar zemi<br />
+staigādam'<br />
+2x</p>
+
+<p>došu roku<br />
+pirmai dāmai<br />
+kas man acē<br />
+trāpīsies<br />
+2x</p>
+
+<p>vai cik labi<br />
+jūtu, jūtu<br />
+pazaudēto<br />
+vakariņ'<br />
+2x</p>
+
+<p>man bij' labi<br />
+klētiņāi'<br />
+gulēt plikam<br />
+lādītē<br />
+2x</p>
+
+<p>cik bija laba<br />
+rīta rasa<br />
+kas man drēbi<br />
+mitrināj'<br />
+2x</p>
+
+<p>vai cik slikta<br />
+diena, diena<br />
+kas pēc alus<br />
+parādās<br />
+2x</p>
+
+<p>vēl sliktākā<br />
+dieniņāi'<br />
+kur nav alus<br />
+rociņā<br />
+2x</p>
+
+<p>laiks nu ieti<br />
+čuči, čuči<br />
+saldi miegā<br />
+blusu ķert<br />
+2x</p>
+
+<p>un no rīta<br />
+nezināti<br />
+ko es vakar<br />
+sadarīj'<br />
+2x</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">None</pre>
+        <pre class="date-block">2025-04-04</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
