--- a/vasara.html
+++ b/vasara.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>None | The Collective Archive Of cafiro</title>
+    <title>vasara | The Collective Archive Of cafiro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +13,61 @@
 <body>
     <main class="poem-container">
         <a href="index.html" class="back-link">← Back to The Archive</a>
-        <h1 class="poem-title">None</h1>
+        <h1 class="poem-title">vasara</h1>
         <div class="poem-body">
-            <p></p>
+            <p>tavu jūtu mudžeklī<br />
+tauriņi ķērc<br />
+saldais nekomforts<br />
+mīlas vērts</p>
+
+<p>smalki intīmajās sarunās<br />
+ieķerti mēs<br />
+puišu maigos glāstos<br />
+mūs izdzirdēs</p>
+
+<p>karstuma viļņi dedzina<br />
+ādu sarkanu<br />
+krēmi pat nepalīdz glābt<br />
+miesu manu</p>
+
+<p>tās glābiņs esi tu<br />
+mana roze<br />
+skaista un ļoti asa<br />
+mīlas doze</p>
+
+<p>peldu kā mākoņos<br />
+apjucis tēls<br />
+nāk nu mums klāt<br />
+vakars vēls</p>
+
+<p>vārdi te pasprūk<br />
+domā manā<br />
+cik jauki tevi just<br />
+domu zvanā</p>
+
+<p>mans viss sākums<br />
+dzīves gals<br />
+bez tevis nevaru<br />
+mīlas balss</p>
+
+<p>pieņem mani tepat<br />
+kailā mīlā<br />
+neturi mani savā<br />
+vārdu ķīlā</p>
+
+<p>sūc mani dzīvu<br />
+līdz malai<br />
+gatavo mani savai<br />
+mūža alai</p>
+
+<p>esmu tikai tavs<br />
+viens pats<br />
+vienmēr būsi tu<br />
+mans skats</p>
 
         </div>
         <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">None</pre>
+        <pre class="date-block">2024-06-22</pre>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
