--- a/page2.html
+++ b/page2.html
@@ -29,64 +29,59 @@
         </div>
         <ul id="poemList" class="poem-list">
             
-        <li class="poem-card" data-title="nepareizi dzimušie" data-content="kleptomāņi ārprātīgie,
-lielveikali nolemtie.
-siro zemi mantkārīgie –
-nepareizi dzimušie.
+        <li class="poem-card" data-title="būtība" data-content="rodas reiz jautājums
+vai cilvēks ir tā rīcība
+vai rīcība ir zaudējums
+vai tā ir tava būtība
 
-pirmā rindā garie nagi,
-otrā tie, kas nemāk labi.
-restes kļuva viņu māja
-ieslodzītiem.
+citu domās, esi velns
+manuprāt tikai klauns
+iekšēji tu dziļi melns
+tev pašam vai kauns
 
-ieraudzīju skaistu skatu,
-es pat dotu vienu latu,
-tikai lai to atkārtotu,
-atmiņā lai iekārtotu.
+viena kļūme bedri rok
+tavu vērti projām met
+tagad laiks - jānosmok
+visi vienmēr tikai pret
 
-džeka roka devas lejā,
-skatīdamies tieši sejā,
-izķeksēja iekrājumus,
-ieraudzījis raibumus.
+vientulīgā apātijā
+skumji krāmē koferi
+raudu upē bezgalīgā
+meklē glupu šoferi
 
-ātrā solī devās projām,
-cik vien ātri varēdams,
-acītiņām lielām, spožām,
-pie sevis klusi sacīdams:
+šoferi tu neatrodi
+koferi tu nekrāmē
+apkārtni tu nesaproti
+tu asariņu neslāpē
 
-'kas gan mani ļoti kāro,
-lai es sevi iecienītu?
-gribu zināt vārdu dārgo,
-lai man dotu cerību.
+spogulī tu sevi vēro
+bet tur pretī skatās svešs
+kas par velnu, kas par klaunu
+šis bezjēgas, tukšais ķermenis
 
-es gribu tikai gribu
-just, ka mirklis pieder man,
-ka šī lieta, spožā, gludā,
-manu tukšumu reiz klan.'
+tukšums tavā krūšu kurvī
+plešas plašāk, dziļāk, audz
+katra doma asa kā nazis
+katra elpa tevi žņaudz
 
-aiz stūra elpu atguva,
-sirds tam krūtīs sitās traki.
-saujā dega laupījums,
-auksti, asi, velnišķīgi.
+klusums ausīs skaļāk kliedz
+nekā pūlis ielās trauc
+tu jau sen vairs neko nedod
+tikai iekšēji sev kauc
 
-un es stāvu, vērotājs,
-starp tiem plauktiem, gaismas stariem.
-viņš bija zaglis, es – radītājs
-stāstam par tiem, kas ir gariem
+un tas jautājums, kas sākās,
+paliek trūdam ar smagu krustu.
+tu pats esi atbilde vāja,
+kas bez skaņas brūk ar pūstu." data-date="2025-06-07">
+            <h2 class="index-poem-title"><a href="būtība.html">būtība</a></h2>
+            <div class="poem-preview"><p>rodas reiz jautājums<br />
+vai cilvēks ir tā rīcība<br />
+vai rīcība ir zaudējums<br />
+vai tā ir tava būtība</p>
 
-gariem pirkstiem, tukšām sirdīm,
-kas caur veikaliem iet klusi,
-meklējot starp lietu mirdziem
-savu pazudušo pusi." data-date="2025-06-07">
-            <h2 class="index-poem-title"><a href="nepareizi dzimušie.html">nepareizi dzimušie</a></h2>
-            <div class="poem-preview"><p>kleptomāņi ārprātīgie,<br />
-lielveikali nolemtie.<br />
-siro zemi mantkārīgie –<br />
-nepareizi dzimušie.</p>
-
-<p>pirmā rindā garie nagi,  </p>
+<p>citu domās, esi velns  </p>
 <br><span class="ellipsis">...</span></div>
-            <a href="nepareizi dzimušie.html" class="read-more">Read more →</a>
+            <a href="būtība.html" class="read-more">Read more →</a>
         </li>
         
         <li class="poem-card" data-title="ieraudzīju" data-content="ieraudzīju kamieli,
