deploy: 7c3bdc6285895e6a99b0d70b1549f863f53ff9f7

--- a/page4.html
+++ b/page4.html
@@ -13,10 +13,6 @@
         .search-sort-bar { display: flex; gap: 1em; margin-bottom: 2em; }
         .search-input { flex: 1; padding: 0.5em; font-size: 1em; }
         .sort-select { padding: 0.5em; font-size: 1em; }
-        .pagination-links { display:flex; gap: .5rem; flex-wrap: wrap; justify-content:center; margin: 2rem 0; }
-        .pagination-links a, .pagination-links span { padding: .4rem .6rem; border: 1px solid #ccc; border-radius: 6px; text-decoration: none; }
-        .pagination-links .current { font-weight: 700; background: #f5f5f5; }
-        .pagination-links .disabled { opacity: .5; cursor: not-allowed; }
     </style>
 </head>
 <body>
@@ -31,7 +27,6 @@
                 <option value="asc">Date: Oldest First</option>
             </select>
         </div>
-
         <ul id="poemList" class="poem-list">
             
         <li class="poem-card" data-title="tev, tava, tavs" data-content="būšu tava [meitene]
@@ -195,7 +190,7 @@ brūk un pil gauži, gauži,
 pēdējo elpu veic plauži.
 
 plauži, plauži, gārdz un kliedz,
-ak, ku&#x27; daudzi jau ir smiets.
+ak, ku' daudzi jau ir smiets.
 smiets līdz pašai debesmalai,
 sitot cauri skaņas skalai.
 
@@ -300,8 +295,6 @@ bet dzīvei piešķiru mīkstumu,</p>
         </li>
         
         </ul>
-
-        <div class="pagination-links"><a href="page3.html" class="prev-next">« Previous</a><a href="index.html" class="page-number">1</a><a href="page2.html" class="page-number">2</a><a href="page3.html" class="page-number">3</a><span class="page-number current">4</span><a href="page5.html" class="page-number">5</a><a href="page6.html" class="page-number">6</a><a href="page5.html" class="prev-next">Next »</a></div>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
