--- a/page6.html
+++ b/page6.html
@@ -13,10 +13,6 @@
         .search-sort-bar { display: flex; gap: 1em; margin-bottom: 2em; }
         .search-input { flex: 1; padding: 0.5em; font-size: 1em; }
         .sort-select { padding: 0.5em; font-size: 1em; }
-        .pagination-links { display:flex; gap: .5rem; flex-wrap: wrap; justify-content:center; margin: 2rem 0; }
-        .pagination-links a, .pagination-links span { padding: .4rem .6rem; border: 1px solid #ccc; border-radius: 6px; text-decoration: none; }
-        .pagination-links .current { font-weight: 700; background: #f5f5f5; }
-        .pagination-links .disabled { opacity: .5; cursor: not-allowed; }
     </style>
 </head>
 <body>
@@ -31,7 +27,6 @@
                 <option value="asc">Date: Oldest First</option>
             </select>
         </div>
-
         <ul id="poemList" class="poem-list">
             
         <li class="poem-card" data-title="a poem about a radioactive duck" data-content="there once was a duck,
@@ -43,9 +38,9 @@ suddenly he sees a corn,
 and quietly he starts to mourn.
 
 come one bruv, breath,
-it won&#x27;t take a part of me,
-it&#x27;s not what you need,
-you&#x27;re not that mean.
+it won't take a part of me,
+it's not what you need,
+you're not that mean.
 
 yummy,
 says snuck.
@@ -105,8 +100,6 @@ visu laiku esot omā!</p>
         </li>
         
         </ul>
-
-        <div class="pagination-links"><a href="page5.html" class="prev-next">« Previous</a><a href="index.html" class="page-number">1</a><a href="page2.html" class="page-number">2</a><a href="page3.html" class="page-number">3</a><a href="page4.html" class="page-number">4</a><a href="page5.html" class="page-number">5</a><span class="page-number current">6</span><span class="prev-next disabled">Next »</span></div>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
