--- a/page3.html
+++ b/page3.html
@@ -13,10 +13,6 @@
         .search-sort-bar { display: flex; gap: 1em; margin-bottom: 2em; }
         .search-input { flex: 1; padding: 0.5em; font-size: 1em; }
         .sort-select { padding: 0.5em; font-size: 1em; }
-        .pagination-links { display:flex; gap: .5rem; flex-wrap: wrap; justify-content:center; margin: 2rem 0; }
-        .pagination-links a, .pagination-links span { padding: .4rem .6rem; border: 1px solid #ccc; border-radius: 6px; text-decoration: none; }
-        .pagination-links .current { font-weight: 700; background: #f5f5f5; }
-        .pagination-links .disabled { opacity: .5; cursor: not-allowed; }
     </style>
 </head>
 <body>
@@ -31,7 +27,6 @@
                 <option value="asc">Date: Oldest First</option>
             </select>
         </div>
-
         <ul id="poemList" class="poem-list">
             
         <li class="poem-card" data-title="dot, dot, dot" data-content="Even birds are caged to the sky,
@@ -47,7 +42,7 @@ Leaving us with muffled speech.
 Lonely screams begin to sprout,
 Your mind starts filling with doubt.
 Let us find a different route,
-Now&#x27;s the time to scout.
+Now's the time to scout.
 
 The walls around begin to close,
 Built from fears that no one knows.
@@ -258,8 +253,6 @@ autobusā lēnā.</p>
         </li>
         
         </ul>
-
-        <div class="pagination-links"><a href="page2.html" class="prev-next">« Previous</a><a href="index.html" class="page-number">1</a><a href="page2.html" class="page-number">2</a><span class="page-number current">3</span><a href="page4.html" class="page-number">4</a><a href="page5.html" class="page-number">5</a><a href="page6.html" class="page-number">6</a><a href="page4.html" class="prev-next">Next »</a></div>
     </main>
     <footer>
         <p>© 2025 cafiro</p>
