deploy: 1fa7f39ca29afa9b641e8007a3f8beb702e4fc80

--- a/bet_es.html
+++ b/bet_es.html
@@ -18,34 +18,36 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
         }
-        .poem-container {
-            width: 80%;
-            max-width: 800px;
-            padding: 2rem;
-            background-color: white;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
         .back-link {
-            display: block;
-            margin-bottom: 1.5rem;
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
             font-size: 1.1rem;
             text-decoration: none;
             color: #555;
+        }
+        .poem-container {
+            width: 100%;
+            max-width: 800px;
+            padding: 2rem;
+            background-color: transparent;
+            text-align: center;
         }
         .poem-title {
             font-size: 2.5rem;
             font-weight: 700;
             margin-bottom: 1rem;
+            text-align: center;
         }
         .poem-body {
             font-size: 1.2rem;
             margin-bottom: 2rem;
+            text-align: center;
         }
         .artist-name {
             font-size: 1rem;
@@ -55,15 +57,11 @@
             font-size: 0.9rem;
             color: #ccc;
         }
-        footer {
-            text-align: center;
-            margin-top: 2rem;
-        }
     </style>
 </head>
 <body>
+    <a href="index.html" class="back-link">← Back to The Archive</a>
     <main class="poem-container">
-        <a href="index.html" class="back-link">← Back to The Archive</a>
         <h1 class="poem-title">bet es</h1>
         <div class="poem-body">
             <p>esmu kā kukainis [zēns]<br />
@@ -140,8 +138,5 @@ kas tevi ieskauj<br />
         <p class="artist-name">/cafiro/</p>
         <pre class="date-block">Date finished: 2025-06-17</pre>
     </main>
-    <footer>
-        <p>© 2025 cafiro</p>
-    </footer>
 </body>
 </html>
