deploy: b742ebeafaf9bea1b994d73d90724d7f46b7dbe7

--- a/a_poem_about_a_radioactive_duck.html
+++ b/a_poem_about_a_radioactive_duck.html
@@ -54,6 +54,7 @@
             color: #888;
         }
         .date-block {
+            font-family: 'Lora', serif;
             font-size: 0.9rem;
             color: #ccc;
         }
