--- a/ce_ojums_cer_b_.html
+++ b/ce_ojums_cer_b_.html
@@ -54,6 +54,7 @@
             color: #888;
         }
         .date-block {
+            font-family: 'Lora', serif;
             font-size: 0.9rem;
             color: #ccc;
         }
