--- a/dzejol_tis__par__rk_rt_gi_labu_laika_pavad__anu.html
+++ b/dzejol_tis__par__rk_rt_gi_labu_laika_pavad__anu.html
@@ -54,6 +54,7 @@
             color: #888;
         }
         .date-block {
+            font-family: 'Lora', serif;
             font-size: 0.9rem;
             color: #ccc;
         }
