--- a/no_burbu_a_l_dz_olai.html
+++ b/no_burbu_a_l_dz_olai.html
@@ -54,6 +54,7 @@
             color: #888;
         }
         .date-block {
+            font-family: 'Lora', serif;
             font-size: 0.9rem;
             color: #ccc;
         }
