--- a/l_i_f_e_.html
+++ b/l_i_f_e_.html
@@ -2,70 +2,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>l.i.f.e. | The Collective Archive Of cafiro</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Lora', serif;
-            line-height: 1.7;
-            color: #333333;
-            background-color: #fbfaf8;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .back-link {
-            position: absolute;
-            top: 1rem;
-            left: 1rem;
-            font-size: 1.1rem;
-            text-decoration: none;
-            color: #555;
-        }
-        .poem-container {
-            width: 100%;
-            max-width: 800px;
-            padding: 2rem;
-            background-color: transparent;
-            text-align: center;
-        }
-        .poem-title {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-        .poem-body {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-            text-align: center;
-        }
-        .artist-name {
-            font-size: 1rem;
-            color: #888;
-        }
-        .date-block {
-            font-family: 'Lora', serif;
-            font-size: 0.9rem;
-            color: #ccc;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>l.i.f.e.</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 2rem;
+      font-family: 'Lora', serif;
+      background-color: #fbfaf8; /* same background as archive */
+      color: #222;
+    }
+
+    a.back-link {
+      position: fixed;
+      top: 1rem;
+      left: 1rem;
+      text-decoration: none;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    .poem-container {
+      max-width: 700px;
+      margin: 5rem auto;
+    }
+
+    h1.poem-title {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 1.5rem;
+      text-align: left; /* left aligned now */
+    }
+
+    .poem-content {
+      font-size: 1rem;
+      line-height: 1.4; /* tighter line spacing */
+      white-space: pre-line; /* keeps poem line breaks */
+      text-align: left; /* left aligned now */
+    }
+  </style>
 </head>
 <body>
-    <a href="index.html" class="back-link">← Back to The Archive</a>
-    <main class="poem-container">
-        <h1 class="poem-title">l.i.f.e.</h1>
-        <div class="poem-body">
-            <p>bullet, skull, pain, death penalty<br />
+  <a href="../index.html" class="back-link">← Back to The Archive</a>
+
+  <div class="poem-container">
+    <h1 class="poem-title">l.i.f.e.</h1>
+    <div class="poem-content"><p>bullet, skull, pain, death penalty<br />
 the sudden sting is poking my heart.<br />
 it all starts to seem like a comedy<br />
 and everything around me becomes dark  </p>
@@ -84,10 +67,7 @@ let me scream standing in the pouring rain  </p>
 internal echoes in my mind are one of a kind<br />
 fading feelings and my depression combined<br />
 emptiness is the reason I became so blind</p>
-
-        </div>
-        <p class="artist-name">/cafiro/</p>
-        <pre class="date-block">2023-10-10</pre>
-    </main>
+</div>
+  </div>
 </body>
 </html>
